end of episode 9

--- a/css/custom.css
+++ b/css/custom.css
@@ -22,3 +22,35 @@
 .navbar-dark .dropdown-item.active, .navbar-dark .dropdown-item:active {
   background-color: #343a40;
 }
+
+.products-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.products-wrapper .card{
+  width: 275px;
+  margin: 6px;
+}
+
+.products-wrapper .card .card-img-top{
+  height: 200px;
+  width: auto;
+  object-fit: contain;
+}
+
+.list-price {
+  color: #888;
+  font-size: 12px;
+  text-decoration: line-through;
+}
+
+.products-wrapper .card-title a {
+  color: #000;
+}
+
+.products-wrapper .card-title a:hover {
+  color: #888;
+  text-decoration: none;
+}
