product details and started shopping cart

--- a/css/custom.css
+++ b/css/custom.css
@@ -54,3 +54,35 @@
   color: #888;
   text-decoration: none;
 }
+
+.product-details-body{
+  margin: 18px 0;
+  padding: 12px;
+  border: 1px solid #eee;
+  box-shadow: 2px 2px 6px rgba(0,0,0,0.2);
+}
+
+.product-details-price{
+  color: crimson;
+}
+
+.product-details-label{
+  font-weight: bold;
+}
+
+.product-details-slideshow .carousel-control-prev-icon,
+.product-details-slideshow .carousel-control-next-icon{
+  background: unset;
+  color: #101820;
+  font-size: 32px;
+  text-shadow: 0px 0px 3px #fff;
+}
+
+.back-to-results{
+  color: #101820;
+  font-size: 14px;
+}
+
+.back-to-results:hover, .back-to-results:active{
+  color: #000;
+}
