--- a/css/custom.css
+++ b/css/custom.css
@@ -86,3 +86,108 @@
 .back-to-results:hover, .back-to-results:active{
   color: #000;
 }
+
+.shopping-cart-item {
+  display: flex;
+  border: 1px solid #f5f5f5;
+  border-radius: 6px;
+  box-shadow: 2px 2px 8px rgba(0,0,0,0.2);
+  padding: 12px;
+  margin: 18px 0px
+}
+
+.shopping-cart-item-name {
+  color: #101820;
+  font-size: 18px;
+  margin: 0px 18px;
+  display: flex;
+  align-items: center;
+  flex-grow: 3;
+  flex-wrap: wrap;
+  align-content: center;
+}
+
+.shopping-cart-item-name a {
+  color: #101820;
+  width: 100%;
+}
+
+.shopping-cart-item-name p {
+  margin: 12px 0 0 0;
+  font-size: 13px;
+  color: #555;
+}
+
+.shopping-cart-item-img img{
+  height: 150px;
+  width: 150px;
+  object-fit: contain;
+  margin-right: 18px;
+}
+
+.shopping-cart-item-qty{
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  margin: 0px 18px;
+}
+
+.shopping-cart-item-qty label {
+  margin-right: 18px;
+  margin-bottom: 0;
+  color: #555;
+}
+
+.shopping-cart-item-qty input {
+  width: 36px;
+  margin: 0px 12px;
+}
+
+.shopping-cart-item-price{
+  font-size: 18px;
+  color: #101820;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  align-content: center;
+}
+
+.shopping-cart-item-price div{
+  width: 100%;
+}
+
+.shopping-cart-item-price .shipping{
+  color: #555;
+  font-size: 12px
+}
+
+.shopping-cart-summary {
+  padding: 18px;
+  border: 1px solid #f5f5f5;
+  border-radius: 8px;
+  box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+  margin-top: 18px;
+}
+
+.cart-line-item {
+  display: flex;
+  align-content: center;
+  justify-content: space-between;
+  margin: 12px 0;
+}
+
+.cart-line-item.grand-total {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.remove-item {
+  font-size: 12px;
+  color: crimson;
+  cursor: pointer;
+  margin-top: 12px;
+}
+
+.remove-item:hover {
+  color: #ff0000;
+}
