end of episode_14

--- a/css/custom.css
+++ b/css/custom.css
@@ -249,3 +249,22 @@
   font-size: 15px;
   font-weight: bold;
 }
+
+li.nav-item.nav-cart {
+  position: relative;
+}
+
+li.nav-item.nav-cart .nav-badge{
+  position: absolute;
+  top: -2px;
+  right: -5px;
+  color: #fff;
+  font-size: 10px;
+  font-weight: bold;
+  line-height: 10px;
+  display: inline-block;
+  border: 2px solid #343a40;
+  border-radius: 50%;
+  padding: 4px;
+  background-color: #ff3300;
+}
